# telegram-multi-thread-router

./: .env.example  .gitignore  CLAUDE.md  KS_AGENT_CONTEXT.md  LICENSE  README.md  SPEC.MD  pyproject.toml
.claude-plugin/: marketplace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
orchestrator/: CLAUDE.md
plugin/telegram-multi/: .mcp.json  package.json  server.ts
proxy/: package.json
proxy/scripts/: transcribe.py
proxy/src/: bot.ts  chat-history.ts  commands.ts  file-handler.ts  index.ts  ipc-server.ts  topics-registry.ts  types.ts
scripts/: get-session-id.sh  start-all.sh  start-orchestrator.sh  start-proxy.sh  start-session.sh
src/: __main__.py  config.py
src/bot/: dispatcher.py  middlewares.py  output.py  status.py
src/db/: connection.py  queries.py  schema.py
src/ipc/: client.py  protocol.py  server.py
src/sessions/: backend.py  codex_accounts.py  codex_app_server.py  codex_runner.py  codex_selector.py  codex_usage.py  health.py  manager.py  mcp_tools.py  orchestrator.py  orchestrator_mcp.py  permissions.py  (+6 more)
tests/: conftest.py  test_codex_app_server.py  test_codex_runner.py  test_codex_selector.py  test_codex_usage.py  test_db.py  test_ipc.py  test_middleware.py  test_orchestrator.py  test_output.py  test_permissions.py  test_router.py  test_session_routing.py  test_status.py  test_voice_and_files.py  test_worker.py
(+65 files in other folders)
