[project]
name = "telegram-multi-thread-router"
version = "2.0.0"
description = "Telegram bot for controlling multiple Claude Code sessions via forum topics"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26.0,<4",
    "aiosqlite>=0.22.0,<1",
    "claude-agent-sdk>=0.1.50",
    "uvloop>=0.22.0,<1",
    "pydantic-settings>=2.13.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
